Updates routes to use id instead of titles, updates docs, add new route
